...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".ui.neighbour_profile.ProfileNeighbourActivity">

    <FrameLayout
        android:id="@+id/frameLayoutNeighbourProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.neighbour_profile.ProfileNeighbourActivity">

        <!-- Neigbour Details -->
        <ImageView
...
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:background="#fff"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/item_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
...
